--- a/src/Version.css
+++ b/src/Version.css
@@ -2,6 +2,6 @@
   font-style: italic;
   font-size: smaller;
   position: fixed;
-  bottom: 1rem;
-  right: 1rem;
+  bottom: .5rem;
+  right: .5rem;
 }
